[metadata]
name = image-processing-egg
version = 0.3
url = https://github.com/jpsca/image-processing-egg
project_urls =
    Issue tracker = https://github.com/jpsca/image-processing-egg/issues
author = Juan-Pablo Scaletti
author_email = juanpablo@jpscaletti.com
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Software Development :: Libraries
    Topic :: Scientific/Engineering :: Image Processing
    Typing :: Typed
license = MIT
license_files = MIT-LICENSE
description = High-level image processing wrapper for libvips
long_description = file:README.md
long_description_content_type = text/markdown

[options]
packages = find:
include_package_data = true
python_requires = >=3.7,<4.0
install_requires =
    pyvips

[options.packages.find]
exclude =
    tests

[options.extras_require]
test =
    flake8
    flake8-bugbear
    flake8-logging-format
    flake8-quotes
    pillow
    pytest
    pytest-cov
    coverage[toml]

dev =
    black
    ipdb
    isort
    pyright
    tox

[flake8]
application-package-names = image_processing
application-import-names = image-processing
import-order-style = pycharm

select =
  B  # bugbear
  C  # mccabe, comprehensions, commas
  E  # pycodestyle errors
  F  # pyflakes
  G  # logging format
  I  # imports
  P,
  Q  # quotes
  T4  # mypy
  W  # pycodestyle warnings

ignore =
    W503  # line break before binary operator
    W504  # line break after binary operator
    E203  # whitespace before ':'
    E501  # line too long
    C901  # too complex

max-line-length = 98
max-complexity = 10

inline-quotes = double
multiline-quotes = double
docstring-quotes = double

exclude =
  .git
  .venv
  __pycache__
  conftest.py
  docs

[tool:pytest]
addopts = --doctest-modules
